# fast_api_test

./: main.py  pyproject.toml  requirements.txt
src/config/: config.py
