[tool.poetry]
name = "python-web-finalproject"
version = "0.1.0"
description = ""
authors = ["Roman <Tesmail@i.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
redis = "^5.0.1"
fastapi-limiter = "^0.1.6"
sqlalchemy = "^2.0.25"
pydantic-settings = "^2.1.0"
pip = "^23.3.2"
install = "^1.3.5"
pydantic = {extras = ["email"], version = "^2.5.3"}
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
